--- a/nodeServer/package.json
+++ b/nodeServer/package.json
@@ -4,7 +4,9 @@
   "description": "Connecting server with socket.io",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "build": "npm i"
   },
   "author": "Mayank",
   "license": "ISC",
